tests/expected_invalid_lexer_unexpected_character.diag.out
<input>:3:11: error: unexpected character '@'
            1 @ 2
              ^
